# B22AI010_PA2_SU

B22AI010_PA2/: README.md  pyproject.toml
B22AI010_PA2/speech_pipeline/: __init__.py  benchmark.py  evaluate.py  pipeline.py  runtime.py  settings.py
B22AI010_PA2/speech_pipeline/apps/: __init__.py  evaluation_app.py  pipeline_app.py
B22AI010_PA2/speech_pipeline/common/: __init__.py  audio_ops.py  checkpointing.py  hardware.py  lm_utils.py  text_ops.py
B22AI010_PA2/speech_pipeline/enhancement/: __init__.py  deepfilternet.py
B22AI010_PA2/speech_pipeline/language_id/: __init__.py  data.py  eval_segment_prep.py  evaluator.py  inference.py  network.py  preprocessor.py  timestamp_filler.py  trainer.py
B22AI010_PA2/speech_pipeline/phonemization/: __init__.py  hinglish_phonemizer.py
B22AI010_PA2/speech_pipeline/prosody_control/: __init__.py  transfer_engine.py
B22AI010_PA2/speech_pipeline/recognition/: __init__.py  corpus_builder.py  language_model.py  whisper_decoder.py
B22AI010_PA2/speech_pipeline/speaker_id/: __init__.py  resemblyzer_encoder.py
B22AI010_PA2/speech_pipeline/spoofing/: __init__.py  data.py  feature_extraction.py  inference.py  manifest_builder.py  network.py  trainer.py
B22AI010_PA2/speech_pipeline/synthesis/: __init__.py  indicf5.py  parler.py  yourtts.py
B22AI010_PA2/speech_pipeline/translation_engine/: __init__.py  hinglish_translator.py
